Made changes to delete wallet and credentials and it's tests
